# QuickEditButtons

./: .gitignore  CMakeLists.txt  README.md  mod.json
.github/workflows/: build.yml
build-android/: CMakeCache.txt
src/: main.cpp
